--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   flutter_svg: ^2.0.7
   flutter_spinkit: ^5.2.0
   dartz: ^0.10.1
-  dio: ^5.2.1+1
+  dio: ^5.0.1
   lottie: ^2.2.0
   shimmer: ^3.0.0
   get_it: ^7.6.0
@@ -31,7 +31,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   mockito: ^5.4.2
   build_runner: ^2.4.5
-  http_mock_adapter: ^0.4.4
+  http_mock_adapter: ^0.4.2
 
 flutter:
   uses-material-design: true
